--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -2,3 +2,10 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 @charset "utf-8";
+
+@import "bootstrap-scss/bootstrap";
+@import "site/site";
+
+body {
+  background-color: #fafafa;
+}
