New documetation for aws-http project

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,4 @@
-
 {% include base_path %}
+<div class="container">
+  <small>Developed with <i class="fas fa-heart text-info"></i> by <a class="text-info" href="https://rishikeshdarandale.github.io">Rishikesh Darandale</a> for all!</small>
+</div>
