--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,11 @@
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ base_path }}/assets/stylesheets/main.css">
+<!-- https://afeld.github.io/bootstrap-toc/ -->
+<!-- <link rel="stylesheet" href="https://cdn.rawgit.com/afeld/bootstrap-toc/v0.4.1/dist/bootstrap-toc.min.css"> -->
+<!-- prism css -->
+<link rel="stylesheet" href="{{ base_path }}/assets/stylesheets/vendor/prism.css">
+<link rel="stylesheet" href="{{ base_path }}/assets/stylesheets/vendor/bootstrap-toc.min.css">
 
 <meta http-equiv="cleartype" content="on">
 
