--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,5 @@
-<nav>
-  <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
-    <i class="fas fa-align-left"></i>
-      Menu
-  </button>
-</nav>
+<header class="header bg-dark border-info py-3">
+  <div class="container text-left text-info">
+    <h1 data-toc-skip><i class="fas fa-location-arrow"></i> aws-http</h1>
+  </div>
+</header>
